add balance requests and buy option
