# src/Application/BalanceRequest/Queries/BalanceRequestDto.cs
@@ -1,0 +1,10 @@
+using BevMan.Application.Common.Mappings;
+using BevMan.Application.User.Queries;
+
+namespace BevMan.Application.BalanceRequest.Queries;
+
+public class BalanceRequestDto : IMapFrom<Domain.Entities.BalanceRequest>
+{
+    public required UserDto User { get; set; }
+    public required decimal Amount { get; set; }
+}
