# src/Web/wwwroot/swagger/v1/swagger.yaml
@@ -15,7 +15,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BalanceDto'
-    put:
+    post:
       tags:
         - Balance
       operationId: UpdateBalance
@@ -33,6 +33,27 @@ paths:
               schema:
                 type: integer
                 format: int64
+  /api/BalanceRequest:
+    get:
+      tags:
+        - BalanceRequest
+      operationId: GetBalanceRequests
+      responses:
+        '200':
+          description: OK
+    post:
+      tags:
+        - BalanceRequest
+      operationId: Approve
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ApproveBalanceUpdateCommand'
+        required: true
+      responses:
+        '200':
+          description: OK
   /api/Product:
     get:
       tags:
@@ -118,6 +139,31 @@ paths:
           schema:
             type: integer
             format: int64
+      responses:
+        '200':
+          description: OK
+  '/api/Product/{id}/buy':
+    post:
+      tags:
+        - Product
+      operationId: BuyProduct
+      parameters:
+        - name: id
+          in: path
+          required: true
+          style: simple
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/DeleteProductImageCommand'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/DeleteProductImageCommand'
+        required: true
       responses:
         '200':
           description: OK
@@ -235,6 +281,17 @@ components:
           minLength: 1
           type: string
           format: binary
+      additionalProperties: false
+    ApproveBalanceUpdateCommand:
+      required:
+        - balanceRequestId
+      type: object
+      properties:
+        balanceRequestId:
+          type: integer
+          format: int64
+        isApproved:
+          type: boolean
       additionalProperties: false
     BalanceDto:
       type: object
